collapse equiment fix

--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -6,18 +6,20 @@
     cursor: pointer;
     z-index: 30;
     border-radius: 5px;
+    max-width: 1223px;
 
     @include desktop {
             min-height: 50px;
     }
 
     &_content {
-            max-height: 0;
+            height: 0;
             opacity: 0;
         }
     
         &.open {
             .collapse_content {
+                height: auto;
                 padding: 20px;
                 background-color: $color-tertiary;
                 color: $color-secondary;
@@ -35,9 +37,6 @@
 
     }
 
-    @include desktop {
-        margin: 0 auto;
-        }
     
     &_title {
         background-color: $color-secondary;
@@ -74,6 +73,9 @@
     gap: 50px;
     &_item {
             width: 100%;
+            @include desktop {
+                            width: 100%;
+            }
             }
 }
 }
