--- a/src/pages/accomodation/accomodation.scss
+++ b/src/pages/accomodation/accomodation.scss
@@ -14,29 +14,45 @@
         flex-direction: row;
         align-items: center;   
         justify-content: space-between;
+        margin: 0;
     }
-    &_host {
-        display: flex;
-        align-items: center;
-        margin-right: 100px;
-}
     }
         }
+
+.host-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.accomodation_host {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    @include desktop {
+        margin-right: 0;
+    }
+}
 
   .picture {
             border-radius: 50%;
             margin-left: 10px;
-            width: 64px;
+            width: 32px;
+
+            @include desktop {
+                width: 64px;
+            }
         }
 
 
-.tag-container {    
-
+.host-container {    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     @include desktop {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
+    flex-direction: column;
+    align-items: end;
 }
 }
 .tag {
@@ -62,15 +78,17 @@
     img {
             height: 24px;
             margin-top: 20px;
+
+            @include desktop {
+                margin-top: 0;
+ }
         }
-    @include desktop {
-    float: right;
-    margin-right: 100px;
-}
+
 }
 
 h1 {
     font-size: 18px;
+    margin-bottom: 0;
     @include desktop {
     font-size: 36px;
     }
