--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -16,3 +16,7 @@ li {
 h1 {
     font-weight: 500;
 }
+ 
+ul {
+    margin-top: 0;
+}
